インストール機能を追加

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
       </head>
       <ul>
         <li><a href="/brest/UI/index.html">起動</a></li>
+        <li><a href="/brest/manifest.webapp" class="install">インストール</a></li>
       </ul>
     </section>
+    <script src="js/install.js"></script>
   </body>
 </html>
 
