manifest.webapp のアドレスを絶対的に指定

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       </head>
       <ul>
         <li><a href="/brest/UI/index.html">起動</a></li>
-        <li><a href="/brest/manifest.webapp" class="install">インストール</a></li>
+        <li><a href="http://mmr-project.github.io/brest/manifest.webapp" class="install">インストール</a></li>
       </ul>
     </section>
     <script src="js/install.js"></script>
