changed the manifest which is linked from installation button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <p>このシステムの利用には Firefox が必要です。また Web カメラとマイクへのアクセスを許可する必要があります。</p>
         <p class="control">
           <a class="btn btn-primary" href="/analmeeting/index.html">起動</a>
-          <a class="btn btn-primary install-app" href="/apps/analmeeting/package.manifest" data-app-name="ブレインズトーミング採点システム">インストール</a>
+          <a class="btn btn-primary install-app" href="/analmeeting/manifest.webapp" data-app-name="ブレインズトーミング採点システム">インストール</a>
         </p>
       </div>
     </section>
