Modify for publishing

--- a/index.html
+++ b/index.html
@@ -23,12 +23,11 @@
 
     <section class="container">
       <div class="jumbotron">
-        <h1>会議採点</h1>
-        <p>ブレインストーミングの生産性を可視化します。</p>
+        <h1>わいわいメーター</h1>
+        <p>ブレインストーミングの活性度を可視化します。</p>
         <p>このシステムの利用には Firefox が必要です。また Web カメラとマイクへのアクセスを許可する必要があります。</p>
         <p class="control">
-          <a class="btn btn-primary" href="/analmeeting/index.html">起動</a>
-          <a class="btn btn-primary install-app" href="/manifests/analmeeting.webapp" data-app-name="ブレインズトーミング採点システム">インストール</a>
+          <a class="btn btn-primary" href="/Wi-Wi-Meter/index.html">起動</a>
         </p>
       </div>
     </section>
