--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p>ブレインストーミングの活性度を可視化します。</p>
         <p>このシステムの利用には Firefox が必要です。また Web カメラとマイクへのアクセスを許可する必要があります。</p>
         <p class="control">
-          <a class="btn btn-primary" href="/Wi-Wi-Meter/preview_m.html">起動</a>
+          <a class="btn btn-primary" href="/Wi-Wi-Meter/startup.html">起動</a>
         </p>
       </div>
     </section>
